@@ -1,3 +1,9 @@
+2013-09-27  Basic  <simsong@ncr.nps.edu>
+
+	* python/bulk_extractor_reader.py (BulkReport): changed .imagefile() to .image_filename
+
+	* python/identify_filenames.py: changed .imagefile to .image_filename
+
 2013-08-20  Basic  <simsong@Mucha.local>
 
 	* src/scan_accts.flex (dob): DOBs, Fedex#s, and SSNs are now recorded to a feature recorder called 'pii.txt'.
